creating docker deployment
